--- a/style.css
+++ b/style.css
@@ -1,1 +1,84 @@
+* {
+    padding: 0;
+    margin: 0;
+}
 
+.header{
+    min-height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(52, 53, 39, 0.11),
+     rgba(7, 9, 15, 0.418)), url(imagesfile/Bagan.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;                
+
+}
+
+.navdiv{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    transform: translate(0%,100%);
+
+
+}
+
+.navlinks li{
+    display: inline-block;
+    padding: 0px 20px;
+    color: white;
+}
+
+.logo {
+    
+    transform: translate(20%,0%);
+    color: white;
+    transition: 0.5s;
+}
+
+.logo  :hover{
+    color: #C3492C;
+    transform: scale(1.1);
+    transition: 0.2s;
+}
+
+
+.navlinks ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #C3492C;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+
+}
+
+.navlinks ul li:hover::after {
+    width: 100%;
+}
+
+.titlecontent{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.titlecontent{
+    width: 90%;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-15%,-70%);
+    font-size: xx-large;
+    
+}
+
+a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
