--- a/style.css
+++ b/style.css
@@ -73,3 +73,19 @@ a{
     color: white;
     font-size: 20px;
 }
+
+.homepage-card{
+
+    width: 32.5%;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
+    margin: 20px;
+    max-height:20%;
+}
+
+.homepage-card img{
+    max-width: 100%;
+    height: auto;
+}
