--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ a{
     font-size: 20px;
 }
 
-.homepage-card{
+.homepage-card {
 
     width: 32.5%;
     background-color: #f0f0f0;
@@ -85,7 +85,25 @@ a{
     max-height:20%;
 }
 
-.homepage-card img{
+.homepage-card img {
     max-width: 100%;
     height: auto;
+}
+
+.card-content {
+    padding: 16px;
+}
+
+.card-content h2 {
+    font-size: 30px;
+    margin-bottom: 8px;
+}
+
+.card-content .homepagebutton {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: black;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 16px;
 }
