--- a/style.css
+++ b/style.css
@@ -114,7 +114,9 @@ footer {
     background: linear-gradient(to bottom, #B4B396, #423C36);
     color: #f0f0f0;
     padding: 100px 0 30px;
-
+    border-top-left-radius: 125px;
+    font-size: 13px;
+    line-height: 20px;
 }
 
 .row {
@@ -124,15 +126,4 @@ footer {
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-between;
-
-}
-
-.col {
-    flex-basis: 25%;
-    padding: 10px;
-}
-
-.logo {
-    width: 80px;
-    margin-bottom: 30px;
 }
