--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ footer {
     margin-bottom: 30px;
 
 }
-.col h3{
+.col h2{
     width: fit-content;
     margin-bottom: 40px;
     position: relative;
@@ -148,5 +148,16 @@ footer {
     width: fit-content;
     border-bottom: 1px solid #ccc;
     margin: 20px 0;
-    
 }
+
+.col ul li {
+    list-style: none;
+    margin-bottom: 12px;
+}
+
+.col ul li a {
+    text-decoration: none;
+    color: #f0f0f0;
+}
+
+
