--- a/style.css
+++ b/style.css
@@ -169,4 +169,28 @@ footer {
     color: #f0f0f0;
 }
 
+.social-icons .fa-brands {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    color: #000;
+    background: #f0f0f0;
+    margin-right: 15px;
+    cursor: pointer;
+}
+.social-icons .fa-solid {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    color: #000;
+    background: #f0f0f0;
+    margin-right: 15px;
+    cursor: pointer;
+}
 
