--- a/style.css
+++ b/style.css
@@ -98,40 +98,144 @@ body {
     font-weight: 800;
 }
 
+/* Timeless beauty of Bagan */
+.homepage-about {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 80px 100px;
+    background-color: #fff;
+    gap: 60px;
+}
 
+.homepage-about-left {
+    flex: 1;
+    max-width: 500px;
+}
 
+.homepage-about-left h2 {
+    font-family: 'Playfair Display',serif;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.subheading {
+    color: #333;
+    font-size: 16px;
+    margin-bottom: 30px;
+    border-bottom: 2px solid #C3492C;
+    padding-bottom: 10px;
+    display: inline-block;
+}
+
+.homepage-about-left img {
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 0 10px 20px rgb(0, 0, 0. 0.15);
+}
+
+.homepage-about-right {
+    flex: 2;
+    max-width: 700px;
+}
+
+.homepage-about-right p {
+    font-size: 17px;
+    line-height: 1.7;
+    margin-bottom: 30px;
+}
+
+.enter-btn {
+    background-color: #C3492C;
+    color: #fff;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.enter-btn:hover {
+    background-color: #a53e24;
+}
+/* Topiv section */
+.topics-section {
+    padding: 60px 80px;
+    text-align: left;
+}
+
+.topics-section h2 {
+    font-size: 36px;
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 40px;
+}
+
+.homepage-section-topics {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    gap: 30px;
+    padding: 60px 80px;
+}
+
+/* Row of cards */
+.row-of-cards{
+    display: flex;
+    justify-content: left;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+/* Each individual card */
 .homepage-card {
 
     width: 32.5%;
     background-color: #f0f0f0;
-    border-radius: 8px;
+    border-radius: 12px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
     margin: 20px;
     max-height:20%;
+        transition: transform 0.3s ease;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between; */
+
 }
 
 .homepage-card img {
     width: 100%;
     height: auto;
+
 }
 
 .card-content {
     padding: 16px;
+    text-align: center;
 }
 
-.card-content h2 {
+
+.card-content {
     font-size: 30px;
     margin-bottom: 8px;
 }
 
-.card-content .homepagebutton {
+.homepagebutton {
     display: inline-block;
     padding: 8px 16px;
-    background-color: black;
+    background-color: #C3492C;
+    color: #fff;
+    font-weight: bold;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 6px;
     margin-top: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.homepage-card:hover {
+    transform: scale(1.05);
 }
 
 footer {
