--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
     justify-content: space-between;
     align-items: flex-start;
     padding: 80px 100px;
-    background-color: #fff;
+    background-color: white;
     gap: 60px;
 }
 
@@ -114,17 +114,18 @@ body {
 }
 
 .homepage-about-left h2 {
-    font-family: 'Playfair Display',serif;
+    font-family: 'Playfair Display', serif;
     font-size: 40px;
+    letter-spacing: 1px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
 .subheading {
-    color: #333;
+    color: #666;
     font-size: 16px;
     margin-bottom: 30px;
-    border-bottom: 2px solid #C3492C;
+    border-bottom: 2px solid #c3492c;
     padding-bottom: 10px;
     display: inline-block;
 }
@@ -132,7 +133,7 @@ body {
 .homepage-about-left img {
     width: 100%;
     border-radius: 15px;
-    box-shadow: 0 10px 20px rgb(0, 0, 0. 0.15);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
 }
 
 .homepage-about-right {
@@ -146,7 +147,7 @@ body {
     margin-bottom: 30px;
 }
 
-.enter-btn {
+.enter-button {
     background-color: #C3492C;
     color: #fff;
     padding: 12px 24px;
@@ -157,7 +158,7 @@ body {
     transition: background 0.3s ease;
 }
 
-.enter-btn:hover {
+.enter-button:hover {
     background-color: #a53e24;
 }
 /* Topiv section */
