--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ body {
 }
 
 .homepage-about-right p {
+
     font-size: 17px;
     line-height: 1.7;
     margin-bottom: 30px;
@@ -193,18 +194,20 @@ body {
 .homepage-card {
 
     width: 32.5%;
-    background-color: #f0f0f0;
+    background-color: #fff;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
     margin: 20px;
     max-height:20%;
-        transition: transform 0.3s ease;
+    transition: transform 0.3s ease;
     /* display: flex;
     flex-direction: column;
     justify-content: space-between; */
 
 }
+
+
 
 .homepage-card img {
     width: 100%;
@@ -236,7 +239,7 @@ body {
     cursor: pointer;
 }
 .homepage-card:hover {
-    transform: scale(1.05);
+    transform: scale(1.15) !important;
 }
 
 footer {
