adding proper search bar
Problem: my link to other pages on the navigation bar moves towards where search box should be.
Feat: Added the search bar, ovelay search bar.
Style: I style the button and search bar by CSS.

--- a/style.css
+++ b/style.css
@@ -74,13 +74,86 @@ body {
     transition: 0.2s;
 }
 
-.search a {
-    color: #fff;
-    font-size: 18px;
-    /* line-height: 1.2; */
+/* style open button */
+.openbtn {
+    position: absolute;
+    background-color: #c3492c;
+    border: none;
+    font-size: 22px;
+    padding: 4px 20px;
+    top: 40px;
+    right: 40px;
+    color: white;
+    cursor: pointer;
+}
+
+.openbtn:hover {
+    background-color: #a53e24;
+    color: white;
+    
+}
+/* Seach overlay */
+.search{
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.search-content {
+    position: relative;
+    top: 40%;
+    width: 70%;
+    margin: auto;
+    margin-top: 30px;
+    text-align: center;
+}
+
+/* create the close */
+.search .closebtn{
+    position: absolute;
+    top: 25px;
+    right: 50px;
+    color: white;
+    font-size: 60px;
+    cursor: pointer;
+}
+.search .closebtn:hover {
+    color: #a53e24;
 
 }
 
+.search input[type=text] {
+    float: left;
+    width: 80%;
+    border: none;
+    padding: 17px;
+    font-size: 17px;
+    background-color: white;
+}
+
+.search input[type=text]:hover {
+    background-color: #f2f2f2;
+}
+
+.search button {
+    float: left;
+    width: 20%;
+    font-size: 17px;
+    padding: 17px;
+    background-color: #c3492c;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+.search button:hover {
+    background-color: #a53e24;
+}
 
 .titlecontent{
     color: #fff;
