--- a/style.css
+++ b/style.css
@@ -691,8 +691,15 @@ hr {
 /* Styling Temple Page ends here */
 
 /* Styling the Culture Page */
-.festival section {
-    padding: 80px 10%;
+.section-title {
+    font-family: 'Playfair Display', serif;
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+/* Styling the festival section */
+.festival-section {
+    padding: 80px 60px;
     background-color: white;
     font-family: 'Lato', sans-serif;
     color: #333;
@@ -721,4 +728,23 @@ hr {
 .festival-card img {
     width: 100%;
     border-radius: 4px;
+}
+
+/* Styling cultural dance section */
+.cultural-dance-section {
+    padding: 80px 60px;
+    background-color: #B4B396;
+    font-family: 'Lato', sans-serif;
+    color: #333;
+}
+
+.cultural-dance-video {
+    margin-bottom: 20px;
+}
+
+.video-credit {
+    font-size: 12px;
+    color: #555;
+    margin-top: 5px;
+    text-align: left;
 }
