--- a/style.css
+++ b/style.css
@@ -323,21 +323,33 @@ body {
 footer {
     width: 100%;
     position: absolute;
-    background: linear-gradient(to bottom, #B4B396, #423C36);
+    /* position: relative; */
+    /* background: linear-gradient(to bottom, #B4B396, #423C36); */
+    background: url('imagesfile/footerdesign.png') no-repeat bottom center;
+    background-size: cover;
     color: #f0f0f0;
-    padding: 100px 0 30px;
-    border-top-left-radius: 125px;
+    /* padding: 100px 0 30px; */
+    /* border-top-left-radius: 125px; */
     font-size: 13px;
     line-height: 20px;
 }
 
+.footer-overlay {
+    background-color: rgba(0, 0, 0, 0.685);
+    padding-top: 100px;
+    mask-image: linear-gradient(black,transparent);
+    -webkit-mask-image: linear-gradient(0deg, black 68%,transparent 100%);
+}
+
 .row {
+
     width: 85%;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-between;
+     gap: 50px;
 }
 
 .col {
