--- a/style.css
+++ b/style.css
@@ -3,11 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+html {
+  overflow-x: hidden;
+  width: 100%;
+}
 body {
     font-family: 'Lato', sans-serif;
     background: white;
     color: #333;
+      overflow-x: hidden;
+  width: 100%;
 }
 
 /* Styling the Navigation Bar */
@@ -805,4 +810,94 @@ hr {
 .cultural-card img {
     width: 100%;
     border-radius: 4px;
+}
+
+.festival-card p,
+.cultural-dance-section p,
+.culture-gallery-section > p {
+    line-height: 1.6;
+    margin-bottom: 15px;
+
+}
+
+.festival-card .image-credit,
+.cultural-card .image-credit {
+    line-height: 1.2;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 9.5px;
+    color: #666;
+    margin-bottom: 20px;
+}
+.festival-card h3,
+.cultural-card h3 {
+    margin-bottom: 10px;
+    font-size: 25px;
+} 
+p {
+    text-align: justify;
+}
+
+/* Responsive */
+/* For Phones */
+@media screen and (max-width: 600px) {
+  .navdiv {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
+  }
+
+  .navlinks ul {
+    flex-direction: column;
+    gap: 10px;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .navlinks ul li {
+    width: 100%;
+  }
+
+  .navlinks ul li a {
+    display: block;
+    padding: 8px;
+  }
+
+  .openbtn {
+    margin-top: 10px;
+  }
+
+  .titlecontent h1 {
+    font-size: 32px;
+    text-align: center;
+    padding: 0 10px;
+  }
+}
+
+/* For tablets */
+@media screen and (max-width: 992px) and (min-width: 601px) {
+  .festival-gallery,
+  .cultural-gallery {
+    flex-wrap: wrap;
+  }
+
+  .festival-card,
+  .cultural-card {
+    max-width: 48%;
+  }
+
+  .titlecontent h1 {
+    font-size: 55px;
+  }
+}
+/* Larger screens */
+@media screen and (min-width: 1200px) {
+  .festival-section,
+  .cultural-dance-section,
+  .culture-gallery-section {
+    padding: 100px 100px;
+  }
 }
