--- a/style.css
+++ b/style.css
@@ -459,9 +459,12 @@ hr {
     display: block;
     margin-top: 10px;
     margin-bottom: 20px;
-
-    
 }
+
+.copyright p {
+   color: white;
+}
+
 
 .underline {
     width: 100%;
