--- a/style.css
+++ b/style.css
@@ -64,17 +64,23 @@ body {
     font-family: 'Lato', sans-serif;
     background: var(--base-color);
     color: var(--text-color);
-      overflow-x: hidden;
-  width: 100%;
+    width: 100%;
+    overflow-x: hidden;
+}
+
+html, body {
+    overflow: visible;
 }
 
 /* Styling the Navigation Bar */
 .navdiv {
+    
     display: flex;
     align-items: baseline;
     justify-content: space-between;
     padding: 30px 80px;
-    position: fixed;
+    /* position: fixed; */
+    position: sticky;
     width: 100%;
     top: 0;
     z-index: 10;
@@ -315,7 +321,9 @@ body {
     background-color: #a53e24;
 }
 /* Restyling topic section as carousle slide */
-
+.topics-section {
+    align-items: center;
+}
 .topic-section-title {
     padding: 60px 80px;
     text-align: center;
@@ -327,7 +335,7 @@ body {
 }
 
 .card-wrapper {
-    max-width: 1100px;
+    max-width: 90%;
     margin: 0 60px 35px;
     padding: 20px 10px;
     overflow: hidden;
@@ -446,74 +454,6 @@ body {
     }
 }
 
-/* Topiv section
-.topics-section {
-    padding: 60px 80px;
-    text-align: center;
-}
-.topics-section h2 {
-    font-size: 36px;
-    font-family: 'Playfair Display', serif;
-    margin-bottom: 40px;
-}
-.homepage-section-topics {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
-    padding: 60px 80px;
-}
-Row of cards
-.row-of-cards{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-}
-Each individual card
-.homepage-card {
-    width: 32.5%;
-    background-color: #fff;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
-    margin: 20px;
-    max-height:20%;
-    transition: transform 0.3s ease;
-
-}
-.homepage-card img {
-    width: 100%;
-    height: auto;
-}
-.card-content {
-    padding: 16px;
-    text-align: center;
-}
-.card-content {
-    font-size: 30px;
-    margin-bottom: 8px;
-
-}
-.homepagebutton {
-    display: inline-block;
-    padding: 8px 16px;
-    background-color: #C3492C;
-    color: #fff;
-    font-weight: bold;
-    text-decoration: none;
-    border-radius: 6px;
-    margin-top: 16px;
-    text-transform: uppercase;
-    cursor: pointer;
-}
-.homepagebutton:hover {
-    background-color: #a53e24;
-}
-.homepage-card:hover {
-    transform: scale(1.15) !important;
-} */
-/* Styling Home page ends here */
 
 /* Styling Footer */
 footer {
@@ -532,7 +472,7 @@ footer {
 }
 
 .footer-overlay {
-
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.685);
     padding-top: 15%;
     mask-image: linear-gradient(black,transparent);
